# RP2040-FreeRTOS

./: CMakeLists.txt  autosar_classic  autosar_target
autosar_target/: CMakeLists.txt  main.c  main.h
